# TileLowRankMDD

./: README.md  environment.yml  install_env.sh  pyproject.toml
example/notebooks/: Overthrust2d.ipynb  SeamSubsalt.ipynb
tilelowrankmdd/mdd/: mdd_fact.py
tilelowrankmdd/solver/: ipalm.py
tilelowrankmdd/utils/: prox.py
